# nous-genai-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  readme_zh.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE_DESIGN.md  CONFIGURATION.md  MCP_SERVER_CLI_SECURITY_REVIEW.md  MODES_INFERENCE_DESIGN.md  providers-api-url.md
examples/: demo.py  mcp.py
nous/: __init__.py
nous/genai/: __init__.py  cli.py  client.py  mcp_cli.py  mcp_server.py  types.py
nous/genai/_internal/: capability_rules.py  config.py  errors.py  http.py  json_schema.py
nous/genai/providers/: __init__.py  aliyun.py  anthropic.py  gemini.py  openai.py  (+2 more)
scripts/: modes_probe.py  tuzi_openai_chat_smoke_cli.py  tuzi_openai_video_smoke_cli.py  tuzi_web_smoke.py
tests/: test_capability_flags.py  test_capability_rules.py  test_cli_google_download_auth.py  test_cli_probe_parsing.py  test_cli_prompt_path.py  test_cli_subcommands.py  test_cli_timeout_hint.py  test_cli_video_wait_default.py  test_client_protected_url_artifacts.py  test_client_timeout.py  test_http_error_mapping.py  test_http_security.py  test_mcp_artifact_limits.py  test_mcp_cli_url_resolution.py  test_mcp_input_policy.py  test_mcp_model_keyword_filter.py  test_mcp_server_transports.py  test_mcp_token_rules.py  test_model_catalog_validation.py  test_model_discovery.py  test_modes_inference.py  test_openai_responses_streaming.py  test_output_json_schema.py  test_output_parser_tool.py  test_reasoning_mapping.py  test_review_report_fixes.py  test_sse_parser.py  test_tool_calling.py  test_tuzi_gemini_markdown_image.py  test_tuzi_models.py
(+16 files in other folders)
