[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nous-genai-sdk"
version = "0.1.0"
description = "Single-endpoint GenAI SDK (OpenAI + Google AI Studio)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = ["mcp>=1.25.0", "uvicorn>=0.30.0"]

[project.scripts]
genai = "nous.genai.cli:main"
genai-mcp-server = "nous.genai.mcp_server:main"
genai-mcp-cli = "nous.genai.mcp_cli:main"

[tool.setuptools.packages.find]
include = ["nous*"]
