[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nous-genai-sdk"
version = "0.1.0"
description = "Single-endpoint GenAI SDK (multi-provider, multimodal)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = ["mcp>=1.25.0", "uvicorn>=0.30.0"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gravtice/nous-genai-sdk"
Issues = "https://github.com/gravtice/nous-genai-sdk/issues"

[dependency-groups]
dev = ["mypy>=1.10.0", "pytest>=8.0.0", "ruff>=0.5.0"]

[project.scripts]
genai = "nous.genai.cli:main"
genai-mcp-server = "nous.genai.mcp_server:main"
genai-mcp-cli = "nous.genai.mcp_cli:main"

[tool.setuptools.packages.find]
include = ["nous*"]

[tool.setuptools.package-data]
nous = ["py.typed"]
